# planetwars-3d

./: deploy.sh
backend/: Cargo.toml
backend/src/: main.rs
frontend/: .gitignore  Cargo.toml  build.sh  index.html  package-lock.json  package.json  standalone.sh  tmp.rs  todo.txt  tsconfig.json  webpack.config.js
frontend/pw/: Cargo.toml
frontend/pw-derive/: Cargo.toml
frontend/pw-derive/src/: attrs_parse.rs  lib.rs
frontend/pw-settings/: Cargo.toml
frontend/pw-settings/src/: lib.rs
frontend/pw/src/: lib.rs
frontend/res/: rocket.dae
frontend/src/: bootstrap.js  index.tsx  lib.rs  main.rs  scene.rs  settings.rs  style.css  util.rs
frontend/src/delaunay/: delaunay.rs  edge.rs  mod.rs  triangle.rs  vector2.rs
frontend/src/engine/: camera.rs  entity.rs  mod.rs  objects.rs  physics.rs
frontend/src/engine/rendering/: mod.rs  renderer.rs  shader.rs
frontend/src/entity/: camera.rs  entity.rs  mod.rs  player.rs
frontend/src/models/: icosahedron.rs  mesh.rs  mod.rs
frontend/src/routing/: router.tsx
frontend/src/sphere/: icosahedron.rs  mod.rs
frontend/src/standalone/: gl.rs  mod.rs  util.rs
frontend/src/universe/: mod.rs  planet.rs
frontend/src/web/: gl.rs  mod.rs  util.rs  webgl.rs
frontend/src/webgl/: basic.frag  basic.vert  buffer.rs  mod.rs  renderer.rs  shader.rs  uniform.rs  webgl.rs
frontend/static/: defines.js  index.html  index.js  settings.js  style.css  universe.json
frontend/static/shaders/: basic.frag  basic.vert  circle.vert
frontend/webgl/: shader.ts  vertexBufferLayout.ts
