[package]
name = "frontend"
version = "0.1.0"
authors = ["Miklós Tusz <mdtusz@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cgmath = "0.17.0"

pw-settings = { version = "0.1", path = "./pw-settings/" }
pw-derive = { version = "0.1", path = "./pw-derive/" }


[dependencies.web-sys]
version = "0.3"
features = [
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
  'console',
  'Window',
  'Document',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Headers',
]
