[package]
name = "frontend"
version = "0.1.0"
authors = ["Miklós Tusz <mdtusz@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "standalone"
required-features = ["standalone"]

[features]
web = ["js-sys", "wasm-bindgen", "wasm-bindgen-futures", "web-sys"]
standalone = ["sdl2", "gl"]

[dependencies]
gl = { version = "0.14.0", optional = true}
js-sys = { version = "0.3", optional = true}
wasm-bindgen = { version = "0.2", features = ["serde-serialize"], optional = true }
wasm-bindgen-futures = {version = "0.4.17", optional = true}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cgmath = "0.17.0"

pw-settings = { version = "0.1", path = "./pw-settings/" }
pw-derive = { version = "0.1", path = "./pw-derive/" }

add_getters_setters = "1.1.2"
tobj = "2.0.2"

collada = "0.13.0"

[dependencies.sdl2]
version = "0.34.0"
optional = true
features = ["bundled", "static-link"]

[dependencies.web-sys]
version = "0.3"
optional = true
features = [
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
  'console',
  'Window',
  'Document',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Headers',
]
